--- a/Rojgar.html
+++ b/Rojgar.html
@@ -225,7 +225,8 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="Rojgar.js"></script>
     <script>
         feather.replace();
     </
+
